# mutual-fund-return-forecasting

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
mutual_fund_nav/: __init__.py  dataset.py  features.py  plots.py
mutual_fund_nav/modeling/: predict.py  train.py
notebooks/: filename.csv
sql/: AddFundIdToMetaData.sql  CalculateMonthlyReturns.sql  FundMetaData insert.sql  FundMetaData insert2.sql  FundMetaData insert3.sql  FundMetaData insert4.sql  FundMetaData insert5.sql  FundMetaData insert6.sql  QueryFundMetaData.sql  SetPrimaryKeyToMetaData.sql  UpdateFundMetaDatatable.sql
