[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mutual_fund_nav"
version = "0.0.1"
description = "Machine learning project to predict the returns of mutual funds"
authors = [
  { name = "Sudarshan T" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["mutual_fund_nav"]
include = ["pyproject.toml", "mutual_fund_nav/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mutual_fund_nav"]
force-sort-within-sections = true

